# qqabc

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  uml.drawio
.github/: .gitignore
.github/workflows/: ci.yml
docs/source/: index.md
src/qqabc/: __init__.py  exceptions.py  qq.py  rurl.py  types.py
src/qqabc/application/domain/model/: job.py
src/qqabc/application/domain/service/: job_queue_service.py  job_queue_service.pyi  job_serializer_registry.py  job_serializer_registry.pyi  result_service.py  status_service.py  status_service.pyi
src/qqabc/application/port/in_/: post_job_status_use_case.py  submit_job_use_case.py  upload_result_use_case.py
src/qqabc/common/: exceptions.py  serializer.py  types.py
src/qqabc/pipe/: __init__.py  channel.py  pipeline.py  stage.py
src/qqabc/rurl/: __init__.py  basic.py  rurl.py
src/qqabc/types/: __init__.py
src/qqabc_cli/: config.py  exception.py  main.py
src/qqabc_cli/commands/: consume.py  download.py  get.py  pop.py  post.py  submit.py  update.py  upload.py  upload.py123
src/qqabc_cli/common/: console.py  outputs.py  utils.py
src/qqabc_cli/di/: in_.py  out.py
src/tests/: test_job.py  test_types.py
src/tests/cli/: test_cli.py
src/tests/fixtures/: __init__.py  faker.py
src/url_resolver/: __init__.py
tests/: test_add_existing.py  test_async_executor.py  test_channel.py  test_general.py  test_iter.py  test_pipe_infra.py  test_pipe_infra_oldpy.py  test_pipeline.py  test_qq.py  test_stage.py  test_storage_load_race.py  test_typing.py  utils.py
tests/bdd/: conftest.py  test_example_async_stage.py  test_example_concurrency.py  test_example_error_handling.py  test_example_fetch_pipeline.py  test_example_mixed_pipeline.py  utils.py
tests/bdd/features/: consume_job.feature  get_status.feature  post_status.feature  submit_job.feature  update_result.feature  update_status.feature  upload_result.feature
tests/bdd/fixtures/: stuff.py
tests/bdd/steps/: test_consume_job.py  test_get_status.py  test_job_submission.py  test_post_status.py  test_update_status.py  test_upload_result.py
tests/tdd/: conftest.py  test_job.py  test_job_repo.py  test_job_status_repo.py  test_types.py  utils.py
tests/tdd/cli/: test_cli.py  test_consume.py  test_job.py  test_result.py  test_status.py  test_submit.py  utils.py
tests/tdd/fixtures/: di.py  faker.py  job_repo.py  msgpack.py  stuff.py  svc.py
tests/tdd/svc/: test_job.py  test_job_svc.py  test_result_svc.py  test_status_svc.py
