[project]
name = "url-resolver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chou Hung-Yi", email = "hychou.svm@gmail.com" }
]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py38"
line-length = 88
[tool.ruff.format]
docstring-code-format = true
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C90"]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pyright>=1.1.407",
    "pytest>=8.3.5",
    "ruff>=0.14.6",
]
